2012-08-24 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Core.java: Fixed a bug (possible null argument as image).
	* src/pandroid_event_viewer/pandorafms/EventList.java: Create incident is displayed as a dialog
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java: FIXME comment removed.
	* src/pandroid_event_viewer/pandorafms/CreateIncidentActivity.java: No longer needed. Removed.

2012-08-24 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Options.java: Fixed a little bug with the connection status textview.
	* res/layout/options.xml: Connection status textview now has a fixed width.
	* res/values/strings.xml: Added an entry.
	* res/values-es/strings.xml: Added an entry.

2012-08-10 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Options.java: Removed url_changed in SharedPreferences.
	* src/pandroid_event_viewer/pandorafms/Main.java: Tags and groups are loading onResume. Also, they are always loaded (url_changed isn't used anymore).
	* src/pandroid_event_viewer/pandorafms/Core.java: Changed method visibility.

2012-08-02 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Core.java: Changed timeout from 10 to 5 seconds.
	* res/layout/item_list_event_layout.xml: Increased drawablePadding of timestamp textview.

2012-08-01 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Main.java: Changed some buttons.
	* res/layout/options.xml,
	  res/layout/main.xml: UI changes.
	* res/values/strings.xml: Entry changed.

2012-08-01 Santiago Munín <burning1@gmail.com>
	* res/layout/create_incident.xml: UI changes.
	* AndroidManifest.xml: Removed some comments and removed header from all activities.
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java: FIXME added.

2012-08-01 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java: TODO added.