@@ -123,7 +123,8 @@
                             <Spinner
                                 android:id="@+id/refresh_combo"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1" />
                         </LinearLayout>
 
                         <TextView
